Rosario Student Information System - CHANGES

Changes in 2.8.28
-----------------
- Do NOT use GetStuList() otherwise limited to UserStudentID() in PrintClassPictures.php

Changes in 2.8.27
-----------------
- Correctly get Discipline Fields based on user school & year in EmailReferral.fnc.php
- Update Portuguese translation in locale/pt_PT.utf8/ thanks to @adrianomarinho
- Fix Food Service Students Accounts Account ID check + Translate Food Service Discount options
- Fix Food Service User balance widget in StaffWidgets.fnc.php
- Enable empty value when updating Food Service menu item in MenuItems.php
- Order Report Cards by Course title in ReportCards.fnc.php
- Fix SQL error when more than 1 Attendance Period Teacher in Export.php
- Fix typo in INSTALL instructions + update instructions for Ubuntu 14.04
- Fix Custom User Permissions: remove default program in Exceptions.php
- Fix Portal Polls display for Teachers & Parents in Portal.php
- Fix more than 1 row returned SQL error in GPA widget: use REPORTING_GP_SCALE in Widgets.fnc.php
- Fix menu_id's $id var for Menus tabs in DailyMenus.php
- Show Letter & Percent grades (= 0 case) in StudentGrades.php
- Fix PDF when Teacher / Room combined with skip row / line in StudentLabels.php

Changes in 2.8.26
-----------------
- Fix SQL errors when Creating User Food Service account / barcode
- Add Danish & Malaysian locale & flags files
- Allow negative amounts in Student Billing & Accounting modules
- Fix: Limit Accounting Expenses, Incomes, Salaries & Staff Payments to User School
- Give Parents & Students access to the Discipline Referrals #77
- Improve French translation

Changes in 2.8.25
-----------------
- Fix JS error related to jqPlot loading: wrap JS code inside 500ms timeout in *Breakdown.php
- Prepare for State Reports module: Save Report bottom button & modname exception
- Remove State_Reports.zip orginal module archive
- Remove State_Reports from core modules & rename to "Reports"